Fix global container alignment

--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -13,6 +13,7 @@ body {
 
 .container {
     width: 1110px;
+    margin: 0 auto;
 }
 
 .visually-hidden {
